--- a/index.html
+++ b/index.html
@@ -1,1 +1,207 @@
-Hellow World
+<!DOCTYPE html>
+<html>
+<head>
+  <title>My blog post</title>
+  <style>
+  body {
+    background-color: #f5f5f0;
+  }
+  .wrap {
+    width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .code-section {
+    background-color: #cccccc;
+    border-radius: 5px;
+    margin: 5px 10px 5px 10px;
+  }
+  code {
+    padding: 10px;
+  }
+  </style>
+</head>
+<body>
+  <div class="wrap">
+
+  <h1>MY BLOG POST</h1>
+  <h2>Deference between if/else and switch</h2>
+  <p>
+    if/else and switch are both control flow operations.  Control flow operations
+    allow you to control the order of the execution and whether to execute certain operations.
+  </p>
+  <p>
+    If/else has the following diagram. 
+  </p>
+  <div class="code-section">
+    <code>
+      &nbsp      if(statements) { <br>
+      &nbsp  &nbsp        // if section <br>
+      &nbsp  &nbsp        //one or more statements <br>
+      &nbsp      } else { <br>
+      &nbsp  &nbsp        // else section <br>
+      &nbsp  &nbsp        //one or more statements <br>
+      &nbsp      } <br>
+    </code>
+  </div>
+  <p>
+    The program reaches if statement it evaluates the statement in the parenthesis if statements is true it will evaluate everything
+    in the brackets.  If there is an else at the end of the if section evaluate the else section if the statement was false.  In Java you can omit
+    the brackets if the section has only one line.  You can also chain several if/then statements by putting an if right after else like the following
+  </p>
+  <div class="code-section">
+    <code>
+    } else if(statement){ <br>
+    </code>
+  </div>
+  <p>
+    Switch has the fallowing diagram
+  </p>
+  <div class="code-section">
+    <code>
+      &nbsp switch(value){ <br>
+      &nbsp &nbsp case compareValue: <br>
+      &nbsp &nbsp &nbsp      //one or more statements <br>
+      &nbsp &nbsp case compareValue: <br>
+      &nbsp &nbsp &nbsp      //one or more statements <br>
+      &nbsp &nbsp default : <br>
+      &nbsp &nbsp &nbsp      //one or more statements <br>
+      &nbsp } <br>
+    </code>
+  </div>
+  <p>
+    When the program reaches switch statement it will compare the value in parenthesis to the values in the case statement.  If it matches
+    one of the compareValues it will execute all statements from that point down including statements after all the other case statements,
+    unless it runs into a break.  If it runs into a break it stops executing statements and exits the whole switch statements.  If the program does
+    not find a match then it does not execute any thing unless there is a default statement then it executes everything after the default.
+  </p>
+  <p>
+    The important difference between the two is that if/else allows you to check if something is true or false and switch compare a value to a
+    list of values.  You can chain if/else instead switch, but switch is easier to read.
+  </p>
+  <p>
+    If you want to want to do certain thing in your program based on whether is true or not use if/else. Like if it’s after 5 you display a closed
+    sign and if it’s before an open sign.
+  </p>
+  <div class="code-section">
+    <code>
+      &nbsp If(time > 5) <br>
+      &nbsp &nbsp  System.out.print(“Closed”); <br>
+      &nbsp else <br>
+      &nbsp &nbsp  System.out.print(“Open”); <br>
+    </code>
+  </div>
+  <p>
+    If you want to compare a value to a list use switch.  Like if you had “Hello World” and wanted to display it
+    on the screen, but using different languages you would use switch
+  </p>
+  <div class="code-section">
+    <code>
+      &nbsp switch(language){ <br>
+      &nbsp &nbsp  case “german”: <br>
+      &nbsp &nbsp &nbsp System.out.print(“Hallo Welt”); <br>
+      &nbsp &nbsp &nbsp break; <br>
+      &nbsp &nbsp  case “english”: <br>
+      &nbsp &nbsp &nbsp System.out.print(“Hello World”); <br>
+      &nbsp &nbsp &nbsp break; <br>
+      &nbsp &nbsp case “turkish”: <br>
+      &nbsp &nbsp &nbsp System.out.print(“Selam Dunya”); <br>
+      &nbsp &nbsp &nbsp break; <br>
+      &nbsp &nbsp default : <br>
+      &nbsp &nbsp &nbsp System.out.print(“sorry I don’t know that”) <br>
+      &nbsp } <br>
+    </code>
+  </div>
+  <h2>What is the difference between “=“ vs “==“ .equals()</h2>
+  <p>
+    “=“ is used to assign the value on the right to variable on the left.
+  </p>
+  <p>
+    “==“ is used to compare two primitive values like int, float, boolean, char. If the
+    value on the left is the same as the value on the right it will return true.  If not it
+    will return false .  It can be used on other things like string and object
+    but, I will only return true if they point to the same area in memory.
+  </p>
+  <div class="code-section">
+    <code>
+      &nbsp 10 == 10 // true <br>
+      &nbsp 1 == 3     // false <br>
+      &nbsp A == A    // true <br>
+      &nbsp A == a.   // false <br>
+    </code>
+  </div>
+  <p>
+    .equals() is used to compare content of object like strings. It is method of the object.
+    If object contain same value it returns true.  If not it returns false.
+  </p>
+  <div class="code-section">
+    <code>
+      &nbsp String a = “hi” , b = “bye”, c = “hi”; <br>
+      <br>
+      &nbsp a.equals(“hi”)       // true <br>
+      &nbsp a.equals(“bye”)    // false <br>
+      &nbsp a.equals(c)          // true <br>
+      &nbsp a.equals(b).         // false <br>
+    </code>
+  </div>
+  <h2>Math object</h2>
+  <p>
+    Math is class built into java that contains several math related static
+    members and methods. That means you can use them without substantiate the
+    class.  In java names of classes are capitalized.  That is why it’s Math and not math.
+  </p>
+  <p>
+    Math.random() returns a random double value between 0 and 1 including 0 but never 1.
+  </p>
+  <h2>Return types</h2>
+  <p>
+    If a method has return type of void it means it does not return any value.
+    If you declare a return type the program expect return type in the declaration.
+    Here are some examples.
+  </p>
+  <div class="code-section">
+    <code>
+      &nbsp plusOneVoid(4); // displays 5 on screen <br>
+      &nbsp System.out.print(plusOneReturn(4)); // displays 5 on screen <br>
+      <br>
+      &nbsp public static void plusOneVoid(int a){ <br>
+      &nbsp &nbsp System.out.print(a + 1); <br>
+      &nbsp } <br>
+      <br>
+      &nbsp public static void plusOneReturn(int a){ <br>
+      &nbsp &nbsp return a + 1; <br>
+      &nbsp } <br>
+    </code>
+  </div>
+  <p>
+    Both of these methods add one to number, but plusOneVoid() writes to the
+    screen and returns nothing.  While plusOneReturn() adds returns a value when called.
+  </p>
+  <h2>Casting a double to an int</h2>
+  <p>
+    Double holds a value that often times contains number with a decimal point like 1.99, 2.34.
+    There is times you just want an integer value.  You can convert a double to an integer by
+    putting a (int) front of it.  Here is some examples
+  </p>
+  <div class="code-section">
+    <code>
+      &nbsp (Int) 99.99 // 99 <br>
+      &nbsp (Int) 2.78   // 2 <br>
+    </code>
+  </div>
+  <p>
+    When you do this the number after decimal get dropped and number before decimal gets returns
+  </p>
+  <p>
+    One example where you would want to use this is when generating random number.  Since Math.random() only generates a double between 0 and .999999… you can’t get integers
+    from it.  One way to get integers from Math.random() multiply there return with an integer than cast it to a int. Here a example
+  </p>
+  <div class="code-section">
+    <code>
+      &nbsp (Int)(Math.random() * 6) //gives you a range between 0 and 5 <br>
+      &nbsp ((Int)(Math.random() * 10) + 1) // gives you range between 1 and 10 <br>
+    </code>
+  </div>
+</div>
+</body>
+</html>
